<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings">


    <RadioGroup
        android:layout_marginTop="200dp"
        android:id="@+id/group"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <RadioButton
            android:id="@+id/word"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/seeEng">

        </RadioButton>
        <RadioButton
            android:id="@+id/translated"

            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/seeMgl">

        </RadioButton>
        <RadioButton
            android:id="@+id/Both"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/seeBoth">

        </RadioButton>


    </RadioGroup>

    <LinearLayout
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
